--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,12 @@ header nav a {
     padding: 0 35px;
 }
 
+/* Hero image */
+.hero {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
