--- a/css/index.css
+++ b/css/index.css
@@ -231,6 +231,47 @@ header nav a {
     justify-content: center;
 }
 
+/* Colored Boxes */
+.middle-content .box.box1 {
+    background: teal;
+}
+
+.middle-content .box.box2 {
+    background: gold;
+}
+
+.middle-content .box.box3 {
+    background: cadetblue;
+}
+
+.middle-content .box.box4 {
+    background: coral;
+}
+
+.middle-content .box.box5 {
+    background: crimson;
+}
+
+.middle-content .box.box6 {
+    background: forestgreen;
+}
+
+.middle-content .box.box7 {
+    background: darkorchid;
+}
+
+.middle-content .box.box8 {
+    background: hotpink;
+}
+
+.middle-content .box.box9 {
+    background: indigo;
+}
+
+.middle-content .box.box10 {
+    background: dodgerblue;
+}
+
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
