--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,18 @@ header nav a {
     padding-bottom: 20px;
 }
 
+.top-content.about-page {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+
+.top-content .text-container-about {
+    padding: 0 1%;
+    padding-bottom: 20px;
+}
+
 .middle-content {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
