--- a/css/index.css
+++ b/css/index.css
@@ -204,15 +204,15 @@ header nav a {
     padding-bottom: 20px;
 }
 
-.top-content.about-page {
+.top-content-about {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
 
-.top-content .text-container-about {
-    padding: 0 1.9%;
+.top-content-about .text-container {
+    padding: 0 1.8%;
     padding-bottom: 20px;
 }
 
@@ -288,7 +288,7 @@ header nav a {
 .middle-content-about {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .middle-content-about div {
@@ -323,6 +323,11 @@ header nav a {
 
 .bottom-content .text-container:last-child {
     padding-right: 0;
+}
+
+/* Bottom content about */
+.bottom-content-about {
+    margin: 0 2.5% 40px;
 }
 
 footer {
