--- a/css/index.css
+++ b/css/index.css
@@ -435,3 +435,27 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/* Media queries */
+@media (max-width: 415px) {
+
+    /* Header */
+    header {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: baseline;
+    }
+
+    /* Nav bar items */
+    header nav a:last-child {
+        /* Used padding for bigger navigation menu click */
+        padding: 0;
+    }
+
+    .middle-content-about {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
